done with sytemap nft
